[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameObjects/Menu_Win.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg-menu-win.png" type="Texture" id=2]
[ext_resource path="res://Themes/buttons.tres" type="Theme" id=3]
[ext_resource path="res://Audio/froggywinsong.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/froggywin.mp3" type="AudioStream" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -12.0
margin_right = 2150.0
margin_bottom = 1216.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = 66.0
margin_right = -152.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_start" type="Button" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Start"

[node name="button_quit" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 76.0
margin_bottom = 52.0
theme = ExtResource( 3 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="winsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
